--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         
     - name: Build
       run: |
-        mkdir build
+        mkdir -p build  
         cd build
         cmake ..
         make
