--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,26 +6,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    
+    - uses: actions/checkout@v4
+
     - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y cmake g++ libgtest-dev build-essential
-        
+
+    - name: Clean and prepare build directory
+      run: |
+        rm -rf build    # Удаляем старую папку, если она есть
+        mkdir -p build  # Создаем новую
+
     - name: Build
       run: |
-        mkdir -p build  
         cd build
-        cmake ..
+        cmake .. -DCMAKE_BUILD_TYPE=Release
         make
         ctest --output-on-failure
-        
+
     - name: Create DEB package
       run: |
         cd build
         cpack -G DEB
-        
+
     - name: Upload Release
       uses: softprops/action-gh-release@v1
       with:
